--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -190,7 +190,7 @@
         margin-left: -13px;
         margin-top: 10px;
         position: absolute;
-        top: 0;
+        top: 0.5px;
         width: 11px;
       }
 
