--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -8,12 +8,19 @@
   justify-content: space-between;
   padding: 0 20px;
 
-  .partner {
-    height: 22px;
-    margin-right: 15px;
+  .contain-partners {
+    align-items: center;
+    display: flex;
+
+    .partner {
+      margin-right: 15px;
+      max-width: 70px;
+    }
   }
 
   > .links {
+    align-items: center;
+    display: flex;
     list-style: none;
 
     li {
@@ -27,6 +34,15 @@
       color: $color-20;
       cursor: pointer;
       text-decoration: none;
+    }
+
+    .bar-hor {
+      border: solid 1px $color-20;
+      border-top: 0;
+      display: inline-block;
+      height: 5px;
+      margin-left: 4px;
+      width: 40px;
     }
   }
 }
