--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -81,3 +81,14 @@ a {
     }
   }
 }
+
+.section-title {
+  color: $color-9;
+  display: block;
+  font-size: $font-size-xx-big;
+  font-weight: $font-weight-normal;
+  line-height: 1.05;
+  margin: 60px 0 18px;
+  max-width: 700px;
+  width: 100%;
+}
