--- a/app/styles/components/map/c-support-modal.scss
+++ b/app/styles/components/map/c-support-modal.scss
@@ -14,6 +14,28 @@
   width: 100%;
   z-index: 2;
 
+  .close-modal-button {
+    align-items: center;
+    background-color: $color-4;
+    border-radius: 100%;
+    cursor: pointer;
+    display: flex;
+    height: 40px;
+    justify-content: center;
+    position: absolute;
+    right: -20px;
+    top: 26px;
+    width: 40px;
+
+    .cross {
+      background: linear-gradient(to bottom, transparent 35%, $color-7 35%, $color-7 65%,  transparent 65%),
+      linear-gradient(to right, transparent 35%, $color-7 35%, $color-7 65%, transparent 65%);
+      height: 16px;
+      transform: rotate(45deg);
+      width: 16px;
+    }
+  }
+
   form {
 
     h1 {
