--- a/app/styles/components/c-support-form.scss
+++ b/app/styles/components/c-support-form.scss
@@ -109,6 +109,7 @@
           border: solid 1px $color-14;
           color: $color-4;
           display: block;
+          font-size: $font-size-small;
           min-height: 245px;
           outline: 0;
           padding: 10px;
