--- a/app/styles/components/c-mobile-menu.scss
+++ b/app/styles/components/c-mobile-menu.scss
@@ -9,9 +9,13 @@
   position: fixed;
   top: 0;
   transform: translatex(-100%);
-  transition: .3s ease-in .2s;
+  transition: 'transform' ease-in .2s;
   width: 90%;
   z-index: 100;
+
+  &.-show {
+    transform: translatex(0);
+  }
 
   ul {
     list-style: none;
@@ -65,11 +69,16 @@
 .menu-back {
   background-color: rgba($color-12, .8);
   bottom: 0;
+  display: none;
   left: 0;
-  opacity: .9;
+  opacity: 0;
   position: fixed;
   right: 0;
   top: 0;
   z-index: 20;
-  // display: none;/*change*/
+
+  &.-show {
+    display: block;
+    opacity: .9;
+  }
 }
