--- a/app/styles/components/c-the-project.scss
+++ b/app/styles/components/c-the-project.scss
@@ -6,9 +6,38 @@
     padding: 85px 0 90px;
   }
 
+  ul {
+
+    li {
+      color: $color-9;
+      font-family: $font-family-2;
+      font-size: $font-size-normal;
+      line-height: 1.6;
+
+      &:first-child {
+        margin-top: 15px;
+      }
+
+      & + li {
+        margin-top: 15px;
+       }
+     }
+  }
+
+  .steps-list {
+    display: flex;
+    list-style: none;
+
+
+    li {
+      padding-right: 20px;
+      width: calc(100% / 3);
+    }
+  }
+
   .line-separator {
-    background-color: #e8f4f9;
-    height: 2px;
+    background-color: $color-10;
     border: 0;
+    height: 2px;
   }
 }
