--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -1,5 +1,5 @@
-@import url(https://fonts.googleapis.com/css?family=Roboto:300,400,700);
-@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700);
+@import url('https://fonts.googleapis.com/css?family=Roboto:300,400,700');
+@import url('https://fonts.googleapis.com/css?family=Roboto+Slab:400,300,100,700');
 
 // Font families
 $font-family-1: 'Roboto', sans-serif;
