updated logos & added beta one to map page

--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -20,6 +20,7 @@
   .icon-menu-mobile {
     cursor: pointer;
     display: block;
+    margin-right: 20px;
     width: 21px;
 
     @media #{$mq-tablet} {
