change styles and update content

--- a/app/styles/components/c-the-project.scss
+++ b/app/styles/components/c-the-project.scss
@@ -2,17 +2,9 @@
 
 .c-the-project {
   -webkit-font-smoothing: antialiased;
-
-  li {
-    color: $color-9;
-    font-family: $font-family-2;
-    font-size: $font-size-normal;
-    line-height: 1.6;
-  }
-
-  .container-the-project {
-    padding: 85px 0 90px;
-  }
+  margin: 0 auto;
+  max-width: 700px;
+  padding: 85px 0 90px;
 
   .list-info {
     list-style: none;
@@ -21,13 +13,9 @@
       padding-left: 30px;
       position: relative;
 
-      div {
+      p {
         padding-left: 60px;
         padding-right: 30px;
-      }
-
-      &:first-child {
-        margin-top: 15px;
       }
 
       & + li {
@@ -53,80 +41,5 @@
         margin-bottom: 50px;
       }
     }
-  }
-
-  .steps-list {
-    display: flex;
-    list-style: none;
-
-
-    li {
-      padding-right: 20px;
-      width: calc(100% / 3);
-
-      h2 {
-        color: $color-9;
-        font-family: $font-family-1;
-        font-size: $font-size-xx-big;
-        font-weight: $font-weight-normal;
-        line-height: 1.05;
-        text-align: center;
-        text-transform: uppercase;
-
-        span {
-          display: block;
-          font-size: $font-size-small;
-          font-weight: $font-weight-bold;
-          letter-spacing: -.1px;
-        }
-      }
-
-      .image-steps {
-        background-image: url('../../assets/images/background_3.png');
-        background-repeat: no-repeat;
-        background-size: cover;
-        display: flex;
-        height: 170px;
-        justify-content: center;
-        margin: 60px 0 20px;
-        position: relative;
-        width: 100%;
-
-        &::after {
-          background-color: rgba($color-7, .8);
-          bottom: 0;
-          content: '';
-          left: 0;
-          position: absolute;
-          right: 0;
-          top: 0;
-          z-index: 0;
-        }
-
-        img {
-          width: 45px;
-          z-index: 1;
-        }
-      }
-
-      h3 {
-        color: $color-9;
-        font-family: $font-family-1;
-        font-size: $font-size-x-medium;
-        font-weight: $font-weight-normal;
-        line-height: 1.44;
-        margin-bottom: 25px;
-      }
-    }
-  }
-
-  .line-separator {
-    background-color: $color-10;
-    border: 0;
-    height: 2px;
-  }
-
-  .contain-contact {
-    margin-bottom: 90px;
   }
 }
