fix button style error

--- a/app/styles/components/c-button.scss
+++ b/app/styles/components/c-button.scss
@@ -39,6 +39,7 @@
   background-color: $color-3;
   border: 0;
   color: $color-4;
+  cursor: pointer;
   display: block;
   font-size: $font-size-small;
   font-weight: $font-weight-bold;
