--- a/app/styles/components/c-info-web.scss
+++ b/app/styles/components/c-info-web.scss
@@ -8,7 +8,7 @@
   padding-top: 100px;
 
   .image-info-web {
-    background-image: url('../../assets/images/background_8.png');
+    background-image: url('../../assets/images/homepage.png');
     background-repeat: no-repeat;
     background-size: cover;
     height: 355px;
