--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 
 .c-cover-page {
-  background: $color-19 url('../../assets/images/background_1.png') center;
+  background: $color-19 url('../../assets/images/contact_us.png') center;
   background-size: cover;
   transition: background-image .2s ease-in-out;
 
@@ -95,6 +95,18 @@
 
   .cover-main-subtitle {
     margin-bottom: 60px;
+  }
+
+  .cover-attribution {
+    position: relative;
+    color: $color-4;
+    font-size: $font-size-x-small;
+
+    span {
+      position: absolute;
+      right: 6px;
+      bottom: 1px;
+    }
   }
 
   //Style blog post detail
