implemented image attribution component

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -17,6 +17,7 @@ $wrap-desktop: 115px;
 // Font sizes
 $font-size-tiny: 10px;
 $font-size-x-small: 12px;
+$font-size-xs-small: 13px;
 $font-size-small: 14px;
 $font-size-normal: 16px;
 $font-size-x-normal: 18px;
