Fixed map styles & getting rid of layout-settings file

--- a/app/styles/components/map/c-durationpicker.scss
+++ b/app/styles/components/map/c-durationpicker.scss
@@ -1,6 +1,4 @@
 @import '../../settings';
-@import '../../layout-settings';
-
 
 .c-durationpicker {
   background-color: $color-1;
@@ -19,6 +17,6 @@
 
   .c-durationpicker-text {
     display: inline-block;
-    margin-top: 4px;;
+    margin-top: 4px;
   }
 }
