--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -13,6 +13,10 @@ $wrap-mobile: 25px;
 $wrap-tablet: 55px;
 $wrap-desktop: 115px;
 
+// Map
+$timebar-height: 70px;
+$duration-picker-height: 24px;
+
 
 // Font sizes
 $font-size-tiny: 10px;
@@ -50,6 +54,8 @@ $color-12: #000;
 $color-13: #2b4f93;
 $color-19: #174084;
 $color-20: #bfbfbf;
+$color-21: #121a2a; // UI kit map
+$color-22: rgba(7, 51, 56, .3); // UI kit map
 
 // Colors to review
 $color-14: #2d3a57;
