moved step list to homepage

--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -22,14 +22,14 @@ $duration-picker-height: 24px;
 $font-size-tiny: 10px;
 $font-size-x-small: 12px;
 $font-size-xs-small: 13px;
-$font-size-small: 14px;
+$font-size-small: 14px; // UI kit
 $font-size-normal: 16px;
 $font-size-x-normal: 18px;
 $font-size-medium: 20px;
-$font-size-x-medium: 25px;
+$font-size-x-medium: 25px; // UI kit
 $font-size-big: 30px;
 $font-size-x-big: 34px;
-$font-size-xx-big: 40px;
+$font-size-xx-big: 40px; // UI kit
 $font-size-xxx-big: 70px;
 $font-size-huge: 100px;
 
@@ -47,7 +47,7 @@ $color-5: #b8b8b8;
 $color-6: #ef4323;
 $color-7: #294480;
 $color-8: #18306d;
-$color-9: #4a4a4a;
+$color-9: #4a4a4a; // UI kit
 $color-10: #e8f4f9;
 $color-11: #0d1a34;
 $color-12: #000;
