--- a/app/styles/_base.scss
+++ b/app/styles/_base.scss
@@ -92,6 +92,12 @@ a {
   }
 }
 
+ul {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+}
+
 .section-title {
   color: $color-9;
   display: block;
