--- a/app/styles/components/c-contact.scss
+++ b/app/styles/components/c-contact.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 
 .c-contact {
-  background: url('../../assets/images/contact_us.png') no-repeat center;
+  background: url('../../assets/images/contact_us.jpg') no-repeat center;
   background-size: cover;
   min-height: 100%;
   position: relative;
