--- a/app/styles/components/c-cover-page.scss
+++ b/app/styles/components/c-cover-page.scss
@@ -1,7 +1,7 @@
 @import '../settings';
 
 .c-cover-page {
-  background: $color-19 url('../../assets/images/contact_us.png') center;
+  background: $color-19 url('../../assets/images/contact_us.jpg') center;
   background-size: cover;
   position: relative;
   transition: background-image .2s ease-in-out;
