update styles with static layaout and header styles

--- a/app/styles/components/shared/c-header.scss
+++ b/app/styles/components/shared/c-header.scss
@@ -80,6 +80,7 @@
         color: $color-4;
         cursor: pointer;
         display: inline-block;
+        font-weight: $font-weight-bold;
         height: 100%;
         letter-spacing: -.1px;
         text-decoration: none;
