--- a/app/styles/layout/l-publications-articles.scss
+++ b/app/styles/layout/l-publications-articles.scss
@@ -31,7 +31,13 @@
       width: 100vw;
     }
 
+    &:first-child {
+      padding-top: 0;
+    }
+
     &:last-child {
+      padding-bottom: 0;
+
       &::after {
         content: none;
       }
