Increase oceana logo size on map footer

--- a/app/styles/components/shared/c-footer-mini.scss
+++ b/app/styles/components/shared/c-footer-mini.scss
@@ -12,9 +12,14 @@
     align-items: center;
     display: flex;
 
-    .partner {
+    .google, .skytruth {
       margin-right: 15px;
       max-width: 70px;
+    }
+
+    .oceana {
+      margin-right: 15px;
+      max-width: 90px;
     }
   }
 
