--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -1,5 +1,6 @@
 * {
   box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
 }
 
 html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
@@ -16,6 +17,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
   line-height: 1;
+  position: relative;
 }
 
 ol, ul {
@@ -34,6 +36,19 @@ table {
   border-collapse: collapse;
   border-spacing: 0;
 }
+
+a {
+  text-decoration: none;
+}
+
+
+@font-face {
+  font-family: 'roboto-slab';
+  src: url('roboto/RobotoSlab-Regular.ttf') format('truetype');
+  font-weight: 400;
+  font-style: normal;
+}
+
 
 @font-face {
   font-family: 'roboto';
@@ -60,7 +75,26 @@ body {
   color: #fff;
   font-family: 'roboto', Helvetica, Arial, sans-serif;
   font-size: 12px;
-  font-weight: 100;
+  font-weight: 400;
+}
+
+.wrap {
+  margin: 0 auto;
+  max-width: 1280px;
+  padding: 0 25px;
+  width: 100%;
+}
+
+@media screen and (min-width: 768px) {
+  .wrap{
+    padding: 0 55px;
+  }
+}
+
+@media screen and (min-width: 1024px) {
+  .wrap{
+    padding: 0 115px;
+  }
 }
 
 /* Header */
@@ -85,12 +119,12 @@ header {
 .menu {
   background-color: #2b4f93;
   box-shadow: 0 2px 4px 0 rgba(0, 0, 0, .5);
+  height: 95px;
 }
 
 @media screen and (min-width: 768px) {
   .menu {
     justify-content: space-between;
-    padding: 0 40px;
     background: none;
     box-shadow: none;
   }
@@ -113,27 +147,13 @@ header {
 }
 
 .menu .logo {
-  height: 50px;
-  max-width: 175px;
-  margin: 0;
-  text-indent: -10000px;
-  background: url("../img/logo-mobile@2x.png") no-repeat center center;
-  background-size: contain;
-  width: 100vw;
-}
-
-@media screen and (min-width: 768px) {
-  .menu .logo {
-    height: 51px;
-    max-width: 208px;
-    background: url("../img/logo@2x.png") no-repeat center center;
-    background-size: contain;
-  }
+  height: 61px;
 }
 
 .desktop-menu {
   display: none;
 }
+
 
 @media screen and (min-width: 768px) {
   .desktop-menu {
@@ -142,7 +162,6 @@ header {
     /* The next rule is used to prevent the underline of the login element to go outside
      * of the grid but prokoves the menu to not be centered if the highlighted element isn't the login.
      * This is a temporal fix. */
-    padding-right: 15px;
   }
 
   .desktop-menu img {
@@ -151,37 +170,57 @@ header {
 
   .desktop-menu > li {
     display: inline-block;
-    margin-right: 40px;
+    padding: 10px 10px;
+    position: relative;
+  }
+  .desktop-menu > li:last-of-type {
+    padding-right: 0;
+  }
+  .desktop-menu > li:last-of-type::before {
+    background-color: #fff;
+    content: '';
+    height: 25px;
+    left: -2px;
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 1px;
   }
 
-  .desktop-menu > li:nth-last-child(2) {
-    margin-right: 46px;
+
+  /*.desktop-menu > li:nth-last-child(2) {
+    margin-right: 24px;
   }
+
 
   .desktop-menu > li:last-child {
     border-left: 1px solid #FFF;
-    padding-left: 46px;
+    padding-left: 24px;
     margin-right: 0;
-  }
+  }*/
+
+
 
   .desktop-menu > li > a {
     color: #FFF;
     text-decoration: none;
     font-size: 16px;
-    font-weight: normal;
     letter-spacing: -0.1px;
     cursor: pointer;
+    font-weight: bold;
+    position:relative;
   }
 
   .desktop-menu .selected:after {
-    content: "";
+    background-color: #fff;
+    border-radius: 2px;
+    bottom: -7px;
+    content: '';
     display: block;
-    width: calc(100% + 30px);
     height: 4px;
-    border-radius: 100px;
-    background-color: #ffffff;
-    margin-top: -5px;
-    margin-left: -15px;
+    left: -12px;
+    position: absolute;
+    width: calc(100% + 24px);
   }
 
   .dropdown {
@@ -190,44 +229,33 @@ header {
   }
 
   .dropdown_content {
-    display: none;
-    position: absolute;
     background-color: #FFF;
-    box-shadow: 0 0 4px 0 rgba(0, 0, 0, 0.5);
-    z-index: 99;
-    padding: 15px;
-    width: 160px;
-    transform: translate(-40%, 0px);
-  }
-
-  .dropdown_content li {
-    display: block;
-    padding-left: 0;
-    margin-right: 0;
-    height: 40px;
-    line-height: 40px;
-    text-align: center;
+    display: none;
+    left: 50%;
+    list-style: none;
+    padding: 12px;
+    position: absolute;
+    top: 100%;
+    transform: translateX(-50%);
+    width: 200px;
+    z-index: 20;
   }
 
   .dropdown_content li > a {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    opacity: 0.9;
-    font-size: 15px;
-    font-weight: 400;
-    line-height: 1.5;
-    text-align: center;
     color: #0d1a34;
-    text-transform: uppercase;
-    transition: 0.2s;
+    cursor: pointer;
+    display: block;
+    font-size: 14px;
+    padding: 12px;
+    text-align: center;
     text-decoration: none;
+    text-transform: uppercase;
+    transition: background-color .3s;
+    line-height: 1.07;
   }
 
   .dropdown_content li > a:hover {
-    opacity: 0.6;
-    background-color: #8bbcc7;
+    background-color: rgba(138,187,199, .6);
   }
 
   .dropdown_content li:first-child {
@@ -245,7 +273,15 @@ header {
 
 @media screen and (min-width: 1024px) {
   .desktop-menu > li {
-    margin-right: 92px;
+    padding: 10px 28px;
+  }
+
+  .desktop-menu > li:nth-last-child(2) {
+
+  }
+
+  .desktop-menu > li:last-child {
+
   }
 }
 
@@ -522,17 +558,12 @@ select::-ms-expand {
 }
 
 .log .other-links {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-around;
+  text-align: center;
 }
 
 .log .other-links > a {
   font-size: 14px;
-  font-weight: 500;
-  width: auto;
-  margin-bottom: 10px;
+  color: #fff;
 }
 
 hr {
@@ -616,6 +647,22 @@ hr {
   width: 100%;
 }
 
+.attribution-picture{
+  vertical-align: baseline;
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  top: auto;
+}
+
+.attribution-picture span{
+  margin-right: 5px;
+  color: #fff;
+  font-family: 'roboto-slab', serif;
+  font-size: 13px;
+  line-height: 1.6;
+}
+
 @media screen and (min-width: 768px) {
   .reg form {
     max-width: 730px;
@@ -668,8 +715,9 @@ hr {
 .tos label {
   flex-basis: calc(100% - 30px);
   height: auto;
-  letter-spacing: normal;
   margin: 0;
+  letter-spacing: normal;
+  line-height: 1.6;
   text-transform: none;
 }
 
@@ -685,68 +733,28 @@ hr {
 }
 
 .bg.reg {
-  background-image: url('../img/ship.png');
+  background-image: url('../img/background2.jpg');
 }
 
-@media only screen and (min-width: 768px) {
-  .bg.reg {
-    background-image: url('../img/ship@2x.png');
-  }
-}
 
 .bg.con {
-  background-image: url('../img/ship2.png');
-}
-
-@media only screen and (min-width: 768px) {
-  .bg.con {
-    background-image: url('../img/ship2@2x.png');
-  }
+  background-image: url('../img/background2.jpg');
 }
 
 .bg.log {
-  background-image: url('../img/sky.png');
-}
-
-@media only screen and (min-width: 768px) {
-  .bg.log {
-    background-image: url('../img/sky@2x.png');
-  }
+  background-image: url('../img/background1.jpg');
 }
 
 .bg.res {
-  background-image: url('../img/ship3.png');
-}
-
-@media only screen and (min-width: 768px) {
-  .bg.res {
-    background-image: url('../img/ship3@2x.png');
-  }
+  background-image: url('../img/background2.jpg');
 }
 
 .bg.ty {
-  background-image: url('../img/man.png');
-}
-
-@media only screen and (min-width: 768px) {
-  .bg.ty {
-    background-image: url('../img/man@2x.png');
-  }
+  background-image: url('../img/background1.jpg');
 }
 
 .bg.ty section {
   height: calc(100% - 140px);
-}
-
-.bg.al {
-  background-image: url('../img/ship3.png');
-  min-height: 100vh;
-}
-
-@media only screen and (min-width: 768px) {
-  .bg.al {
-    background-image: url('../img/ship3@2x.png');
-  }
 }
 
 .bg.al::before, .bg.log::before, .bg.reg::before, .bg.res::before, .bg.ty::before {
@@ -879,18 +887,6 @@ hr {
 #advise_email > a {
   display: inline-block;
   width: 100%;
-}
-
-.link_underline {
-  display: inline-block;
-}
-
-.link_underline:after {
-  content: "";
-  display: block;
-  height: 1px;
-  background-color: #f04323;
-  margin-top: 1px;
 }
 
 #button_allow {
