--- a/app/styles/_settings.scss
+++ b/app/styles/_settings.scss
@@ -30,7 +30,7 @@ $font-size-x-medium: 25px; // UI kit
 $font-size-big: 30px;
 $font-size-x-big: 34px;
 $font-size-xx-big: 40px; // UI kit
-$font-size-xxx-big: 70px;
+$font-size-xxx-big: 70px; // UI kit
 $font-size-huge: 100px;
 
 // Font weights
