fixed form bottom margin

--- a/app/styles/components/c-contact-form.scss
+++ b/app/styles/components/c-contact-form.scss
@@ -3,6 +3,7 @@
 .c-contact-form {
   margin: 0 auto;
   max-width: 480px;
+  padding-bottom: 85px;
   position: relative;
   width: 100%;
   z-index: 1;
