fixed label line-height & added margin to attribution

--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -678,6 +678,7 @@ hr {
 }
 
 .attribution-picture span{
+  margin-right: 5px;
   color: #fff;
   font-family: 'roboto-slab', serif;
   font-size: 13px;
