--- a/public/form/css/styles.css
+++ b/public/form/css/styles.css
@@ -17,6 +17,7 @@ article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, 
 
 body {
   line-height: 1;
+  position: relative;
 }
 
 ol, ul {
@@ -647,7 +648,11 @@ hr {
 }
 
 .attribution-picture{
-  text-align:right;
+  vertical-align: baseline;
+  position: absolute;
+  bottom: 0;
+  right: 5px;
+  top: auto;
 }
 
 .attribution-picture span{
@@ -746,7 +751,6 @@ hr {
 
 .bg.ty {
   background-image: url('../img/background1.jpg');
-}
 }
 
 .bg.ty section {
